Doctest is working now, fixed geometry.hpp errors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,26 @@
 cmake_minimum_required(VERSION 3.17)
 project(PBR CXX)
 
-set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
-add_executable(pbr_exe
-               ${SRC_DIR}/main.cpp
-               ${SRC_DIR}/core/core.hpp
-               ${SRC_DIR}/core/pbr_math.hpp
-               ${SRC_DIR}/core/pbr_concepts.hpp
-               ${SRC_DIR}/core/geometry.hpp)
+set(pbr_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
-target_include_directories(pbr_exe PRIVATE "${SRC_DIR}")
+set(pbr_lib_SOURCES ${pbr_SRC_DIR}/core/core.hpp
+                    ${pbr_SRC_DIR}/core/pbr_math.hpp
+                    ${pbr_SRC_DIR}/core/pbr_concepts.hpp
+                    ${pbr_SRC_DIR}/core/geometry.hpp
+                    ${pbr_SRC_DIR}/core/geometry.cpp)
+
+
+add_library(pbr_lib STATIC ${pbr_lib_SOURCES})
+set_target_properties(pbr_lib PROPERTIES LINKER_LANGUAGE CXX)
+target_include_directories(pbr_lib INTERFACE ${pbr_SRC_DIR})
 #add_compile_options("/std:c++latest")
-target_compile_options(pbr_exe PUBLIC "/std:c++latest")
+target_compile_options(pbr_lib PUBLIC "/std:c++latest")
 #target_compile_features(pbr_exe PRIVATE cxx_std_20)
 
 
 if(${CMAKE_PROJECT_NAME} STREQUAL PBR)
-    #include(CTest)
+    include(CTest)
     enable_testing()
     add_subdirectory(tests)
 endif()
