Start of transform.hpp implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ set(pbr_lib_SOURCES ${pbr_SRC_DIR}/core/core.hpp
                     ${pbr_SRC_DIR}/core/pbr_math.hpp
                     ${pbr_SRC_DIR}/core/pbr_concepts.hpp
                     ${pbr_SRC_DIR}/core/geometry.hpp
-                    ${pbr_SRC_DIR}/core/geometry.cpp)
+                    ${pbr_SRC_DIR}/core/geometry.cpp
+                    ${pbr_SRC_DIR}/core/transform.hpp)
 
 
 add_library(pbr_lib STATIC ${pbr_lib_SOURCES})
@@ -28,4 +29,4 @@ if(${CMAKE_PROJECT_NAME} STREQUAL PBR)
     add_subdirectory(tests)
 endif()
 
-add_subdirectory(docs)
+#add_subdirectory(docs)
