--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -40,7 +40,7 @@ add_custom_target(Doxygen ALL DEPENDS ${DOXYGEN_INDEX_FILE})
 # ---------------------------------------------------------------------------------------
 # Sphinx
 # ---------------------------------------------------------------------------------------
-set(SPHINX_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/source")
+set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR})
 set(SPHINX_BUILD "${CMAKE_CURRENT_BINARY_DIR}/docs/sphinx")
 set(SPHINX_INDEX_FILE "${SPHINX_BUILD}/index.html")
 
