--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,14 @@ set(pbr_lib_SOURCES ${pbr_SRC_DIR}/core/core.hpp
 add_library(pbr_lib STATIC ${pbr_lib_SOURCES})
 set_target_properties(pbr_lib PROPERTIES LINKER_LANGUAGE CXX)
 target_include_directories(pbr_lib INTERFACE ${pbr_SRC_DIR})
+
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  target_compile_options(pbr_lib PUBLIC "-std=c++20")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    target_compile_options(pbr_lib PUBLIC "/std:c++latest")
+endif()
 #add_compile_options("/std:c++latest")
-target_compile_options(pbr_lib PUBLIC "/std:c++latest")
+
 #target_compile_features(pbr_exe PRIVATE cxx_std_20)
 
 
