Split shape.hpp, initial stats counter implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,11 @@ set(pbr_lib_SOURCES ${pbr_SRC_DIR}/core/core.hpp
                     ${pbr_SRC_DIR}/core/geometry.hpp
                     ${pbr_SRC_DIR}/core/geometry.cpp
                     ${pbr_SRC_DIR}/core/transform.hpp
-                    ${pbr_SRC_DIR}/core/interaction.hpp)
+                    ${pbr_SRC_DIR}/core/interaction.hpp
+                    ${pbr_SRC_DIR}/core/shape.h
+                    ${pbr_SRC_DIR}/core/shape.cpp
+                    ${pbr_SRC_DIR}/core/stats.h
+                    ${pbr_SRC_DIR}/core/stats.cpp)
 
 
 add_library(pbr_lib STATIC ${pbr_lib_SOURCES})
