Finally done with simple Sphere implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,8 @@ set(pbr_lib_CORE_SOURCES ${pbr_SRC_CORE_DIR}/core.hpp
                          ${pbr_SRC_CORE_DIR}/stats.cpp)
 
 set(pbr_SRC_SHAPES_DIR "${pbr_SRC_DIR}/shapes")
-set(pbr_lib_SHAPES_SOURCES ${pbr_SRC_SHAPES_DIR}/sphere.hpp)
+set(pbr_lib_SHAPES_SOURCES ${pbr_SRC_SHAPES_DIR}/sphere.h
+                           ${pbr_SRC_SHAPES_DIR}/sphere.cpp)
 
 
 add_library(pbr_lib STATIC ${pbr_lib_CORE_SOURCES} ${pbr_lib_SHAPES_SOURCES})
