Add Paraboloid implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,9 @@ set(pbr_lib_SHAPES_SOURCES ${pbr_SRC_SHAPES_DIR}/sphere.h
                            ${pbr_SRC_SHAPES_DIR}/disk.h
                            ${pbr_SRC_SHAPES_DIR}/disk.cpp
                            ${pbr_SRC_SHAPES_DIR}/cone.h
-                           ${pbr_SRC_SHAPES_DIR}/cone.cpp)
+                           ${pbr_SRC_SHAPES_DIR}/cone.cpp
+                           ${pbr_SRC_SHAPES_DIR}/paraboloid.h
+                           ${pbr_SRC_SHAPES_DIR}/paraboloid.cpp)
 
 
 add_library(pbr_lib STATIC ${pbr_lib_CORE_SOURCES} ${pbr_lib_SHAPES_SOURCES})
